# surgical-action-planning

./: .env.template  .gitignore  CLAUDE.md  Dockerfile  README.md  data-analysis.md  pyproject.toml  surgcast_proposal.md  surgcast_proposal_v4.md
artifacts/registry/: registry.json  registry_summary.csv
configs/data/: default.yaml
configs/eval/: default.yaml
configs/experiment/: cholec_only.yaml  full.yaml  plus_cvs.yaml  plus_endoscapes.yaml  plus_masking.yaml  plus_phase.yaml  plus_static_prior.yaml  plus_tool_presence.yaml  plus_transition.yaml
configs/model/: default.yaml
configs/train/: cluster.yaml  default.yaml  local_debug.yaml
deploy/k8s/: 2-train.yaml
docs/: build-registry-spec.md  build_registry_spec.md  data-analysis.md  dataset-contract.md  dataset_contract.md  experiment-matrix.md  experiment_matrix.md  runbook.md  surgCast-proposal.md  surgcast_proposal.md
scripts/: build_priors.py  build_registry.py  evaluate.py  extract_features.py  preprocess_cholect50.py  preprocess_endoscapes.py  run_cluster.sh  run_local_debug.sh  train.py
scripts/baselines/: copy_current.py  mml_surgadapt_style.py  surgfutr_style.py
scripts/data/: build_registry.py  build_triplet_groups.py
scripts/paper/: generate_paper_stats.py
surgcast/datasets/: __init__.py  npz_loader.py  registry.py  sampler.py  sequence_dataset.py
surgcast/loss/: __init__.py  hazard_loss.py  multitask.py
surgcast/metrics/: __init__.py  change.py  safety.py  ttc.py
surgcast/models/: __init__.py  heads.py  (+9 more)
tests/: README.md  test_smoke.py  test_smoke_components.py  test_smoke_v2.py
(+14 files in other folders)
